basic css editing

--- a/login.html
+++ b/login.html
@@ -2,18 +2,20 @@
 <html>
 <head>
 	<title>Meru University:Login</title>
+	<link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+	<center>
 	<form>
-		Student Login:<br><br>
+		<div class="header">Student Login:</div><br>
 		Registration Number:<br><br>
 		<input type="text" name="reg"><br>
 		Password:<br><br>
 		<input type="password" name="password"><br><br>
-		<input type="submit" value="Log In"="">
-		<input type="submit" value="Reset Password">
+		<input type="submit" value="Log In" class="login">
+		<input type="submit" value="Reset Password" class="resetpassword"> 
 
-	</form>
+	</form></center>
 
 </body>
 </html>
